--- a/inclass_activity/NER/logm655_fa2018_NER.Rmd
+++ b/inclass_activity/NER/logm655_fa2018_NER.Rmd
@@ -25,7 +25,7 @@ The goal of Named Entity Recognition (NER) is the process of finding spans of te
 
 There are challenges when trying to perform named entity recognition. It is difficult to segment the text correctly to identify what is and isn't an entity. It is also hard to identify the type of entity for a given word. For example, the entity JFK could be used for the airport, a person, or other schools, bridge, and street names. 
 
-#NER as Sequence Labeling
+##NER as Sequence Labeling
 
 A word-by-word sequence labeling task is the most common algorithm for performing named entity recognition. Sequence labeling is simply trying to assign a label to each element of a sequence chosen from a small fixed set of labels. The assigned tags capture both the boundary and the entity type. There are two formats that entities can be tagged: IOB and IO tagging. IOB tagging introduces a tag for the beginning (B) and inside (I) of each entity type, and one for tokens outside (O). This results in _2n+1_ tags for _n_ enitites. IO tagging doesn't identify the B tags, and thus isn't able to distinguish between two entities of the same type right next to one another. This is more rare so typically IO tags are sufficient. IO tagging is simplier by only producing _n+1_ tags. Below we'll see a sentence broken down into IOB and IO tagged entities. 
 
@@ -39,7 +39,7 @@ This sentence is tagged and below are the associated IOB and IO labels broken do
 
 The next sections all cover the standard algorithms for NER.
 
-###Feature-based NER
+##Feature-based NER
 
 Feature-based NER extracts features and then trains either a Maximum Entropy Markov Models (MEMM) or Conditional Random Field (CRF) sequence model. Recall from parts of speeching tagging, MEMM's compute the most likely sequence of tags by combining features of input word $w_i$, its neighbors within _l_ words and the previous _k_ tags (tags conditioned on observed words). Below shows a MEMM parts-of-speech tagger conditioned on previous features (tags) to develop left to right the sequence of tags for the sentence "Janet will back the bill".
 
@@ -68,9 +68,11 @@ A sequence classifier like an MEMM can be trained to label new sentences. In the
 </center>
 
 
-###Neural Algorithm for NER
+##Neural Algorithm for NER
 
-###Rule-based NER
+
+
+##Rule-based NER
 
 Machine learned (neural or MEMM/CRF) sequnce models are common in academic research, but for commerical use, NER is often based on pragnatic combinations of lists and rules. Rule-based NER will typically make repeated passes over text and uses previous results of one pass to influence the next. 
 
@@ -80,9 +82,29 @@ Machine learned (neural or MEMM/CRF) sequnce models are common in academic resea
 4. Apply probabilistic sequence labeling techniques that make use of the tags from previosu stages as additional features.
 
 
-###Evaluation Methods
+##Evaluation Methods
 
-NER systems are evaluated by recall, precision, and $F_1$ measure. Recall is the ratio fo the number of correcetly labeled responses to the total that should have been labeled. Precision is the ratio of the number of correctly labeled respsonses to the total labeled. The F-measure is the harmonic mean of the two. 
+NER systems are evaluated by recall, precision, and $F_1$ measure. Recall is the ratio fo the number of correcetly labeled responses to the total that should have been labeled. Precision is the ratio of the number of correctly labeled respsonses to the total labeled. The F-measure is the harmonic mean of the two. These metrics all treat the entities are the response rather than the words.
+
+There is mismatch between the training and test conditions that develops from using the entities as the response units. Also the segmentation done in NER can create undue error. For example, identifying the entity _American_ as an organization instead of _America Airlines_ would cause two errors. 
+  - a false positive for an Organization entity
+  - a false negative for I-Organization (Airlines)
+
+
+##Applications of NER
+
+Search engine algorithms can apply NER to shorten the lengthy querery of articles. NER can be applied to each article and entities saved to identify a given article. The key tags in the search query can then be compared with the tags associated with the website articles for a quick and efficient search. 
+
+Recommendations on websites can be developed using the NER to automatically filter relevant content a person might want to view. The entities associated with content in someone's history can be compared with labels assigned to other content to make recommendations.
+
+NER can aid a company's hiring process by simplifying resumes down to entities. A company's customer service complaints or feedback can be classified by their entities and directed to the proper departments.   [(2)](https://towardsdatascience.com/a-review-of-named-entity-recognition-ner-using-automatic-summarization-of-resumes-5248a75de175)
+
+
+
+
+
+
+
 
 
 
